tests/ui/generated/should_fail/test__kiss_ladder__R3_minus_R2.stderr
error[E0277]: cannot subtract `Relative<2>` from `Relative<3>`
 --> tests/ui/generated/should_fail/test__kiss_ladder__R3_minus_R2.rs:5:22
  |
5 |    let _ = R3::new() - R2::new();
  |                      ^ no implementation for `Relative<3> - Relative<2>`
  |
  = help: the trait `Sub<Relative<2>>` is not implemented for `Relative<3>`
  = help: the following other types implement trait `Sub<Rhs>`:
            `Relative<0>` implements `Sub<Relative<1>>`
            `Relative<0>` implements `Sub`
            `Relative<1>` implements `Sub<Relative<2>>`
            `Relative<1>` implements `Sub`
            `Relative<2>` implements `Sub<Relative<3>>`
            `Relative<2>` implements `Sub`
            `Relative<3>` implements `Sub<Relative<4>>`
            `Relative<3>` implements `Sub`
